--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-syntax-highlighter": "^15.5.0",
